--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Lato:400,700");
 
 :root {
-  --primaryColor: #87e40d;
+  --primaryColor: #10c219;
   --mainWhite: #fff;
   --mainBlack: rgb(29, 27, 27);
   --mainGrey: #d3cfcf;
@@ -177,7 +177,7 @@ body {
   transition: var(--mainTransition);
   background: rgba(130, 243, 200, 0.5);
   z-index: 2;
-  /* visibility: hidden;  */
+  visibility: hidden; 
 }
 .cart {
   position: fixed;
@@ -190,7 +190,7 @@ body {
   background: rgb(231, 226, 221);
   padding: 1.5rem;
   transition: var(--mainTransition);
-  /* transform: translateX(100%); */
+  transform: translateX(100%);
 }
 .showCart {
   transform: translateX(0);
